# specialization-dynamics

./: .gitignore  README.md  modular_networks.ipynb  pyproject.toml  setup.py
data/: README.md
docs/: pyproject.toml
dynspec/: correlations.py  data_process.py  datasets.py  decision.py  experiment.py  initialization.py  metrics.py  models.py  plotting.py  retraining.py  style_sheet.mplstyle  surrogate.py  tasks.py  training.py  utils.py
examples/: modular_nets.py  modular_networks.ipynb  simple_code.ipynb
scripts/: simple_code.ipynb
